Import the cover specimen.

--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -17,3 +17,7 @@ html(dir="ltr", lang="en")
                         a(href="/specimens/type-scale-b.html") Type scale B
                     li
                         a(href="/specimens/type-scale-c.html") Type scale C
+                    li
+                        a(href="/specimens/fluid.html") Fluid stuff
+                    li
+                        a(href="/specimens/cover.html") Cover
