Import the cover + form specimen.

--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -21,3 +21,5 @@ html(dir="ltr", lang="en")
                         a(href="/specimens/fluid.html") Fluid stuff
                     li
                         a(href="/specimens/cover.html") Cover
+                    li
+                        a(href="/specimens/cover-form.html") Cover + form
