Import the pure CSS dropdown specimen.

--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -23,3 +23,5 @@ html(dir="ltr", lang="en")
                         a(href="/specimens/cover.html") Cover
                     li
                         a(href="/specimens/cover-form.html") Cover + form
+                    li
+                        a(href="/specimens/dropdown.html") Pure CSS dropdown
