Import the Refli homepage specimen.

--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -25,3 +25,5 @@ html(dir="ltr", lang="en")
                         a(href="/specimens/cover-form.html") Cover + form
                     li
                         a(href="/specimens/dropdown.html") Pure CSS dropdown
+                    li
+                        a(href="/specimens/refli-index-struct.html") Refli homepage
