Import the constant title homepage specimen.

--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -27,3 +27,5 @@ html(dir="ltr", lang="en")
                         a(href="/specimens/dropdown.html") Pure CSS dropdown
                     li
                         a(href="/specimens/refli-index-struct.html") Refli homepage
+                    li
+                        a(href="/specimens/refli-index-struct-constant.html") Refli homepage (constant)
