--- a/struct/templates/specimens/type-scale-c.pug
+++ b/struct/templates/specimens/type-scale-c.pug
@@ -10,7 +10,7 @@ html(dir="ltr", lang="en")
         .u-container
             .c-text.flow-all
                 h1 Type scale C
-                p This page shows the type scale, from <code>h1</code> to <code>p</code> for the default (large) context.
+                p This page shows the type scale, from <code>h1</code> to <code>p</code>, for the default (large) context.
 
             .flow-all
                 h1 I am a heading
