--- a/struct/templates/specimens/type-scale-a.pug
+++ b/struct/templates/specimens/type-scale-a.pug
@@ -10,7 +10,7 @@ html(dir="ltr", lang="en")
         .u-container
             .c-text.flow-all
                 h1 Type scale A
-                p This page shows the type scale, from <code>h1</code> to <code>p</code> for the <code>.c-text</code> (application) context.
+                p This page shows the type scale, from <code>h1</code> to <code>p</code>, for the <code>.c-text</code> (application) context.
 
             .c-text.flow-all
                 h1 I am a heading
