Import the documentation about foundations.

--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -9,6 +9,10 @@ html(dir="ltr", lang="en")
     body
         .u-container
             .c-text.flow-all
+                h1 Notes
+                ul
+                    li
+                        a(href="/notes/foundations.html") Foundations
                 h1 Specimens
                 ul
                     li
