--- a/struct/scss/struct/scale.scss
+++ b/struct/scss/struct/scale.scss
@@ -192,6 +192,10 @@ hr {
   margin-top: calc(var(--step-c-0) * 1.4);
 }
 
+.paragraph-70ch p {
+  max-width: 70ch;
+}
+
 
 .with-sidebar {
   display: flex;
