--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -13,6 +13,8 @@ html(dir="ltr", lang="en")
                 ul
                     li
                         a(href="/notes/foundations.html") Foundations
+                    li
+                        a(href="/notes/technicalities.html") Technicalities
                 h1 Specimens
                 ul
                     li
