Import the media-queries page.

--- a/struct/templates/notes/technicalities.pug
+++ b/struct/templates/notes/technicalities.pug
@@ -9,7 +9,7 @@ html(dir="ltr", lang="en")
     body
         .u-container
             .c-content.flow-all.paragraph-70ch
-                h1.c-d-h1 Technicalities
+                h1 Technicalities
 
                 p In the <a href="foundations.html">previous part</a>, we have layed down some foundations upon which we can finally write our own CSS: outlines, reset, box-sizing, and rem definition. In this part we talk about some technical details used to write CSS: how we assemble a single CSS file that can be distributed out of smaller files, and how we name those files and the rules they contain.
 
