--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -15,6 +15,8 @@ html(dir="ltr", lang="en")
                         a(href="/notes/foundations.html") Foundations
                     li
                         a(href="/notes/technicalities.html") Technicalities
+                    li
+                        a(href="/notes/media-queries.html") Media queries
                 h1 Specimens
                 ul
                     li
