--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -17,6 +17,8 @@ html(dir="ltr", lang="en")
                         a(href="/notes/technicalities.html") Technicalities
                     li
                         a(href="/notes/media-queries.html") Media queries
+                    li
+                        a(href="/notes/dimensions.html") Dimensions
                 h1 Specimens
                 ul
                     li
