Use node2nix to create a Nix shell.

--- a/struct/scss/struct/placeholder.scss
+++ b/struct/scss/struct/placeholder.scss
@@ -15,7 +15,7 @@ $g-placeholder-unit: 0.8rem !default; // Same as g-spacer-unit.
 }
 
 .u-placeholder-xs {
-  height: ($g-placeholder-unit / 2) !important;
+  height: calc($g-placeholder-unit / 2) !important;
 }
 
 .u-placeholder-s {
