--- a/itcss/templates/c-content.pug
+++ b/itcss/templates/c-content.pug
@@ -2,7 +2,7 @@ doctype html
 
 html
   head
-    link(rel="stylesheet" href="/static/css/main.css")
+    link(rel="stylesheet" href="/static/css/itcss/main.css")
   body
     .o-container--small.c-content
       h1 Web page typography
