--- a/itcss/templates/layouts/document.pug
+++ b/itcss/templates/layouts/document.pug
@@ -1,6 +1,6 @@
 doctype html
 html
   head
-    link(rel="stylesheet" href="/static/css/main.css")
+    link(rel="stylesheet" href="/static/css/itcss/main.css")
   body
     block body
