--- a/struct/templates/notes/technicalities.pug
+++ b/struct/templates/notes/technicalities.pug
@@ -3,9 +3,10 @@ html(dir="ltr", lang="en")
     head
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1")
-        link(rel="stylesheet", href="/static/css/struct/reset.css")
+        link(rel="stylesheet", href="/static/css/struct/foundations.css")
         link(rel="stylesheet", href="/static/css/struct/ibm-plex.css")
         link(rel="stylesheet", href="/static/css/struct/scale.css")
+        link(rel="stylesheet", href="/static/css/struct/misc.css")
     body
         .u-container
             .c-content.flow-all.paragraph-70ch
