--- a/struct/templates/specimens/refli-index-struct.pug
+++ b/struct/templates/specimens/refli-index-struct.pug
@@ -6,6 +6,7 @@ html(dir="ltr", lang="en")
         link(rel="stylesheet", href="/static/css/struct/foundations.css")
         link(rel="stylesheet", href="/static/css/struct/ibm-plex.css")
         link(rel="stylesheet", href="/static/css/struct/scale.css")
+        link(rel="stylesheet", href="/static/css/struct/misc.css")
     body.u-container-vertical
         header
             .u-container
