--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -7,10 +7,11 @@ html(dir="ltr", lang="en")
         link(rel="stylesheet", href="/static/css/struct/ibm-plex.css")
         link(rel="stylesheet", href="/static/css/struct/scale.css")
         link(rel="stylesheet", href="/static/css/struct/misc.css")
-    body
+    body.u-container-vertical
         .u-container
-            .c-text.flow-all
+            .c-text.flow
                 h1 Notes
+                p These are implementation notes. The long-term goal is to explain how to create the (struct based) design from scratch, with no previous knowledge of CSS or HTML.
                 ul
                     li
                         a(href="/notes/foundations.html") Foundations
@@ -21,13 +22,18 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/notes/dimensions.html") Dimensions
                 h1 Specimens
+                p These are card-like pages to showcase specifics of the design implementation.
                 ul
+                    li
+                        a(href="/specimens/type-scale.html") Type scale
                     li
                         a(href="/specimens/type-scale-a.html") Type scale A
                     li
                         a(href="/specimens/type-scale-b.html") Type scale B
                     li
                         a(href="/specimens/type-scale-c.html") Type scale C
+                    li
+                        a(href="/specimens/type-scale-d.html") Type scale D
                     li
                         a(href="/specimens/fluid.html") Fluid stuff
                     li
@@ -36,7 +42,10 @@ html(dir="ltr", lang="en")
                         a(href="/specimens/cover-form.html") Cover + form
                     li
                         a(href="/specimens/dropdown.html") Pure CSS dropdown
+                h1 Prototypes
+                p These are complete, high-fidelity pages for existing or future application pages, including occasional variants.
+                ul
                     li
-                        a(href="/specimens/refli-index-struct.html") Refli homepage
+                        a(href="/prototypes/refli-index-struct.html") Refli homepage
                     li
-                        a(href="/specimens/refli-index-struct-constant.html") Refli homepage (constant)
+                        a(href="/prototypes/refli-index-struct-constant.html") Refli homepage (constant)
