--- a/struct/templates/specimens/type-scale.pug
+++ b/struct/templates/specimens/type-scale.pug
@@ -11,7 +11,7 @@ html(dir="ltr", lang="en")
         .u-container
             .c-text.flow-all
                 h1 Type scale
-                p This page allows to change the parameters of the type scale. Initial values are the type scale D.
+                p This page allows to visualize a particular type scale. Initial values are the type scale D.
 
             style.
               :root {
