Rename and reorganize the overview page.
It was called fluid.pug, but overview.pug makes a bit more sense.

--- a/struct/scss/struct/misc.scss
+++ b/struct/scss/struct/misc.scss
@@ -65,6 +65,12 @@ hr {
 .c-content p {font-size: var(--step-b-0); line-height: 1.5em;}
 .c-content p small {font-size: var(--step-b--1); line-height: 1.5em;}
 .c-content ul li {line-height: 1.5em;}
+.type-scale-d h1 {font-size: var(--step-d-4);}
+.type-scale-d h2 {font-size: var(--step-d-3);}
+.type-scale-d h3 {font-size: var(--step-d-2);}
+.type-scale-d h4 {font-size: var(--step-d-1);}
+.type-scale-d p {font-size: var(--step-d-0); line-height: 1.5em;}
+.type-scale-d p small {font-size: var(--step-d--1); line-height: 1.5em;}
 .u-step-a-5, .u-step-a-4, .u-step-a-3, .u-step-a-2, .u-step-a-1 {font-weight: 600;}
 .u-step-a-5 {font-size: var(--step-a-5);}
 .u-step-a-4 {font-size: var(--step-a-4);}
