--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -25,6 +25,8 @@ html(dir="ltr", lang="en")
                 p These are card-like pages to showcase specifics of the design implementation.
                 ul
                     li
+                        a(href="/specimens/overview.html") Overview
+                    li
                         a(href="/specimens/type-scale.html") Type scale
                     li
                         a(href="/specimens/type-scale-a.html") Type scale A
@@ -34,8 +36,6 @@ html(dir="ltr", lang="en")
                         a(href="/specimens/type-scale-c.html") Type scale C
                     li
                         a(href="/specimens/type-scale-d.html") Type scale D
-                    li
-                        a(href="/specimens/fluid.html") Fluid stuff
                     li
                         a(href="/specimens/cover.html") Cover
                     li
