--- a/struct/templates/specimens/overview.pug
+++ b/struct/templates/specimens/overview.pug
@@ -376,11 +376,19 @@ html(dir="ltr", lang="en")
 
         .u-container
             .c-text.flow-all
+                h1 Container
+            .u-container.wrapper
+                .b-x60
+
+        hr.hr-full
+
+        .u-container
+            .c-text.flow-all
                 h1 u-bar
-            .u-bar
+            .u-bar.wrapper
                 .b-120x60
                 .b-x60
-            .u-bar
+            .u-bar.wrapper
                 .b-120x60
                 .b-240x60
 
@@ -389,41 +397,46 @@ html(dir="ltr", lang="en")
         .u-container
             .c-text.flow-all
                 h1 Switcher
-            .box
-                .switcher
-                    .b-120x60
-                    .b-x60
-            .box
-                .switcher
-                    .b-120x60
-                    .b-240x60
-            .box
-                .switcher
-                    .box
-                    .box
+            .switcher.wrapper
+                .b-120x60
+                .b-x60
+            .switcher.wrapper
+                .b-120x60
+                .b-240x60
+            .switcher.wrapper
+                .box
+                .box
 
         hr.hr-full
 
         .u-container
             .c-text.flow-all
                 h1 Sidebar
-            .box
-                .with-sidebar
-                    .main
-                        .b-x60
-                    .sidebar
-                        .b-240x60
+            .with-sidebar.wrapper
+                .main
+                    .b-x60
+                .sidebar
+                    .b-240x60
+            .with-sidebar.wrapper
+                .main
+                    .b-x60
+                .sidebar
+                    .b-x60
+            .with-sidebar.wrapper
+                .main
+                    p.lorem
+                .sidebar
+                    h1.lorem
 
         hr.hr-full
 
         .u-container
             .c-text.flow-all
                 h1 Cover
-            .box
-                .cover
-                    .b-120x60
-                    footer
-                        .b-x60
+            .cover.wrapper
+                .b-120x60
+                footer
+                    .b-x60
 
         hr.hr-full
 
