More consistent titles.

--- a/struct/templates/specimens/overview.pug
+++ b/struct/templates/specimens/overview.pug
@@ -351,7 +351,7 @@ html(dir="ltr", lang="en")
 
         .u-container
             .c-text.flow-all
-                h1 The Lorem CSS helper
+                h1 Lorem ipsum
                 p When working with layouting CSS-based primitives and thus with HTML, it's useful to be able to add some content easily in addition of placeholders. The <code>.lorem</code> class can be used for that (either on h1, ... and p elements, or on an enclosing div).
                 p.lorem-1
             .c-text.flow-all
@@ -369,18 +369,18 @@ html(dir="ltr", lang="en")
 
         .u-container
             .c-text.flow-all
-                h1 Box
-            .box
-
-        .u-container
-            .c-text.flow-all
                 h1 Container
             .u-container.wrapper
                 .b-x60
 
         .u-container
             .c-text.flow-all
-                h1 u-bar
+                h1 Box
+            .box
+
+        .u-container
+            .c-text.flow-all
+                h1 Bar
             .u-bar.wrapper
                 .b-120x60
                 .b-x60
@@ -398,6 +398,10 @@ html(dir="ltr", lang="en")
                 .b-120x60
                 .b-240x60
             .switcher.wrapper
+                .box
+                .box
+            .switcher.wrapper
+                .box
                 .box
                 .box
 
